Fix various spacing and background image on signup/login

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1597,6 +1597,25 @@
 		background: #fff;
 	}
 
+	#transparent {
+		position: relative;
+		overflow: hidden;
+	}
+
+	#transparent::after {
+		content: "";
+		position: absolute;
+	    z-index: -1;
+	    top: 0;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    width: 100%;
+	    height: 100%;
+		background-image: url("../../images/avocado-bunches.jpg");
+		opacity: 0.6;
+	}
+
 	#footer-wrapper {
 		position: relative;
 		overflow: hidden;
@@ -1828,7 +1847,7 @@
 		/* Wrappers */
 
 			#features-wrapper {
-				padding: 6em 0 6em 0;
+				padding: 3em 0 3em 0;
 			}
 
 			#banner-wrapper {
@@ -1836,17 +1855,17 @@
 			}
 
 			#main-wrapper {
-				padding: 6em 0 6em 0;
+				padding: 3em 0 0 0;
 			}
 
 			#footer-wrapper {
-				padding: 6em 0 8em 0;
+				padding: 3em 0 0em 0;
 			}
 
 		/* Header */
 
 			#header {
-				padding: 14em 0 7em 0;
+				padding: 10em 0 5em 0;
 			}
 
 				#header h1 {
@@ -2019,8 +2038,8 @@
 		/* Copyright */
 
 			#copyright {
-				margin-top: 6em;
 				padding-top: 4em;
+				padding-bottom: 2em;
 			}
 
 	}
